Add SDFormat model loading support (#1269)
* Add compatibility with SDF model loading

* Add skeleton for implementing SDF converter

* Add `sdformat` dependency in `pixi.toml`

* Add implementation of SDF loader

* Add tests for SDF model loading

* Add documentation of SDF loading

* Add support for IMU, visuals and collisions

* Restore formatting

* Enable SDFormat in CI tests

* Avoid to test SDF with APT

Since it will require to enable OSRF binaries

* Use `libsdformat` instead of `sdformat` in `pixi.toml`

Co-authored-by: Silvio Traversaro <silvio@traversaro.it>

* Apply environment suggestions

Co-authored-by: Silvio Traversaro <silvio@traversaro.it>

* Avoid to allocate dynamic memory for gyro and acc in SDF

* Update cmake/iDynTreeDependencies.cmake

Co-authored-by: Silvio Traversaro <silvio@traversaro.it>

* Constraint libsdformat version to >=16

* Update conda install instructions with constrained libsdformat

* Use iDynTree util for quaternion to SO3

* Load spatial inertia from inertia wrt com

* Report error if parsing goes wrong

* Fix joint axis origin when parsing

* Add roundtrip SDF URDF tests

* Fix SDFormat tests

* Fix inertia tensor handling and joint type checks

* Add check on mass matrix

* Increase tolerance for mass matrix test

---------

Co-authored-by: Silvio Traversaro <silvio@traversaro.it>

--- a/pixi.toml
+++ b/pixi.toml
@@ -23,6 +23,7 @@ configure = { cmd = [
     "-DIDYNTREE_USES_PYTHON:BOOL=ON",
     "-DIDYNTREE_USES_PYTHON_PYBIND11:BOOL=ON",
     "-DIDYNTREE_DETECT_ACTIVE_PYTHON_SITEPACKAGES:BOOL=ON",
+    "-DIDYNTREE_USES_SDFORMAT:BOOL=ON",
     # Use the cross-platform Ninja generator
     "-G",
     "Ninja",
@@ -58,6 +59,7 @@ python = "*"
 numpy = "*"
 yarp = "*"
 osqp-eigen = "*"
+libsdformat = ">=16.0"
 # Find a way to add this only for supported envs
 # icub-main = "*"
 
