--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -17,6 +17,7 @@ if(IDYNTREE_BINDINGS_BUILD_STANDALONE)
   get_filename_component(PARENT_DIR ${CMAKE_CURRENT_SOURCE_DIR} DIRECTORY)
   set(IDYNTREE_INTERNAL_MOXUNIT_PATH "${PARENT_DIR}/extern/MOxUnit/MOxUnit")
   set(IDYNTREE_INTERNAL_MESH2TRI_PATH "${PARENT_DIR}/extern/mesh2tri")
+  include(GNUInstallDirs)
 else()
   get_property(IDYNTREE_LIBRARIES GLOBAL PROPERTY ${VARS_PREFIX}_TARGETS)
 endif()
