Fix Wrong Inertia Matrix For Spherical Joints (#1276)

--- a/src/model/tests/CMakeLists.txt
+++ b/src/model/tests/CMakeLists.txt
@@ -22,4 +22,5 @@ add_unit_test(Link)
 add_unit_test(Model)
 add_unit_test(ModelTransformers)
 add_unit_test(SensorsList)
+add_unit_test(SphericalJointMassMatrix)
 add_unit_test(ThreeAxisForceTorqueContactSensor)
